--- a/index.html
+++ b/index.html
@@ -1,39 +1,132 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Заказ бетона</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background-color: #f9f9fb;
+      color: #333;
+      padding: 20px;
+      line-height: 1.6;
+    }
+
+    h2 {
+      text-align: center;
+      color: #4a4a7d;
+      margin-bottom: 24px;
+      font-weight: 600;
+    }
+
+    form {
+      background: white;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      max-width: 500px;
+      margin: 0 auto;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px 14px;
+      margin-bottom: 16px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 15px;
+      transition: border 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #7c7ce7;
+      box-shadow: 0 0 0 2px rgba(124, 124, 231, 0.2);
+    }
+
+    input::placeholder {
+      color: #aaa;
+    }
+
+    button {
+      width: 100%;
+      padding: 14px;
+      background-color: #7c7ce7;
+      color: white;
+      font-size: 16px;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: #6a6ad9;
+    }
+
+    button:active {
+      background-color: #5a5acb;
+    }
+
+    @media (max-width: 480px) {
+      body {
+        padding: 16px;
+      }
+      form {
+        padding: 20px;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <h2>Форма заказа</h2>
   <form id="orderForm">
-    <input name="Контрагент" placeholder="Контрагент" required><br>
-    <input name="Адрес" placeholder="Адрес"><br>
-    <input name="Класс" placeholder="Класс бетона/марка раствора" required><br>
-    <input name="Подвижность" placeholder="Подвижность, морозостойкость..."><br>
-    <input name="Объем" placeholder="Объем, м³" type="number" required><br>
-    <input name="Подача" placeholder="Способ подачи смеси"><br>
-    <input name="ЦенаБетона" placeholder="Цена бетона, руб." type="number" required><br>
-    <input name="ЦенаДоставки" placeholder="Цена доставки, руб." type="number"><br>
-    <input name="Примечание" placeholder="Примечание"><br>
+    <input name="Контрагент" placeholder="Контрагент" required />
+    <input name="Адрес" placeholder="Адрес" />
+    <input name="Класс" placeholder="Класс бетона/марка раствора" required />
+    <input name="Подвижность" placeholder="Подвижность, морозостойкость..." />
+    <input name="Объем" placeholder="Объем, м³" type="number" step="0.1" required />
+    <input name="Подача" placeholder="Способ подачи смеси" />
+    <input name="ЦенаБетона" placeholder="Цена бетона, руб." type="number" step="0.01" required />
+    <input name="ЦенаДоставки" placeholder="Цена доставки, руб." type="number" step="0.01" />
+    <input name="Примечание" placeholder="Примечание" />
     <button type="submit">Отправить заказ</button>
   </form>
 
   <script>
     const tg = window.Telegram.WebApp;
 
-    document.getElementById("orderForm").addEventListener("submit", function(e) {
+    // Расширяем WebApp на весь экран
+    tg.expand();
+
+    document.getElementById("orderForm").addEventListener("submit", function (e) {
       e.preventDefault();
       const formData = new FormData(this);
       const data = {};
-      formData.forEach((v, k) => data[k] = v);
+      formData.forEach((value, key) => {
+        data[key] = value.trim() || null; // Заменяем пустые строки на null
+      });
 
       // Отправляем JSON обратно в бота
       tg.sendData(JSON.stringify(data));
 
-      // Закрываем WebApp после отправки
-      tg.close();
+      // Уведомление и закрытие
+      tg.showAlert("Заказ отправлен!", () => {
+        tg.close();
+      });
     });
   </script>
 </body>
