--- a/index.html
+++ b/index.html
@@ -6,216 +6,168 @@
   <title>Заказ бетона</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background-color: #f9f9fb;
-      color: #333;
-      padding: 20px;
-      line-height: 1.6;
-    }
-
-    h2 {
-      text-align: center;
-      color: #4a4a7d;
-      margin-bottom: 24px;
-      font-weight: 600;
-    }
-
-    form {
-      background: white;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-      max-width: 500px;
-      margin: 0 auto;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 12px 14px;
-      margin-bottom: 16px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 15px;
-      transition: border 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    input:focus, select:focus {
-      outline: none;
-      border-color: #7c7ce7;
-      box-shadow: 0 0 0 2px rgba(124, 124, 231, 0.2);
-    }
-
-    input::placeholder {
-      color: #aaa;
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      background-color: #7c7ce7;
-      color: white;
-      font-size: 16px;
-      font-weight: 600;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      margin-top: 10px;
-    }
-
-    button:hover {
-      background-color: #6a6ad9;
-    }
-
-    button:active {
-      background-color: #5a5acb;
-    }
-
-    .form-row {
-      display: flex;
-      gap: 12px;
-    }
-
-    .form-row input {
-      flex: 1;
-    }
-
-    @media (max-width: 480px) {
-      body {
-        padding: 16px;
-      }
-      form {
-        padding: 20px;
-      }
-      h2 {
-        font-size: 1.5rem;
-      }
-      .form-row {
-        flex-direction: column;
-      }
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+    body { background-color: #f9f9fb; color: #333; padding: 20px; line-height: 1.6; }
+    h2 { text-align: center; color: #4a4a7d; margin-bottom: 24px; font-weight: 600; }
+    .tabs { display: flex; gap: 8px; margin: 0 auto 16px; max-width: 500px; }
+    .tab { flex: 1; text-align: center; padding: 10px 12px; border-radius: 8px; cursor: pointer; background: #ececff; color: #333; font-weight: 600; }
+    .tab.active { background: #7c7ce7; color: #fff; }
+    .panel { display: none; }
+    .panel.active { display: block; }
+    form { background: white; padding: 24px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08); max-width: 500px; margin: 0 auto; }
+    input, select { width: 100%; padding: 12px 14px; margin-bottom: 16px; border: 1px solid #ddd; border-radius: 8px; font-size: 15px; transition: border 0.3s ease, box-shadow 0.3s ease; }
+    input:focus, select:focus { outline: none; border-color: #7c7ce7; box-shadow: 0 0 0 2px rgba(124, 124, 231, 0.2); }
+    input::placeholder { color: #aaa; }
+    button { width: 100%; padding: 14px; background-color: #7c7ce7; color: white; font-size: 16px; font-weight: 600; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s ease; margin-top: 10px; }
+    button:hover { background-color: #6a6ad9; }
+    button:active { background-color: #5a5acb; }
+    .form-row { display: flex; gap: 12px; }
+    .form-row input { flex: 1; }
+    .orders { max-width: 500px; margin: 0 auto; background: white; padding: 12px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); }
+    .order-item { padding: 10px 8px; border-bottom: 1px solid #eee; cursor: pointer; }
+    .order-item:last-child { border-bottom: none; }
+    .order-item:hover { background: #f7f7ff; }
+    .order-details { margin-top: 12px; padding: 10px; background: #f7f7ff; border-radius: 8px; }
   </style>
 </head>
 <body>
-  <h2>Форма заказа</h2>
-  <form id="orderForm">
-    <input name="Контрагент" placeholder="Контрагент" required />
+  <div class="tabs">
+    <div class="tab" id="tabNew">Новый заказ</div>
+    <div class="tab" id="tabOrders">Мои заказы</div>
+  </div>
 
-    <input 
-      name="Телефон" 
-      placeholder="Контактный телефон" 
-      type="tel" 
-      inputmode="numeric"
-      pattern="[0-9]+" 
-      required 
-    />
+  <div class="panel" id="panelNew">
+    <h2>Форма заказа</h2>
+    <form id="orderForm">
+      <input name="Контрагент" placeholder="Контрагент" required />
+      <input name="Телефон" placeholder="Контактный телефон" type="tel" inputmode="numeric" pattern="[0-9]+" required />
+      <div class="form-row">
+        <input name="Дата" type="date" required />
+        <input name="Время" type="time" placeholder="Время" />
+      </div>
+      <select name="Класс бетона/марка р-ра" required>
+        <option value="" disabled selected>Класс бетона/марка р-ра</option>
+        <option>р-р М100 48 ч</option><option>р-р М150 48 ч</option><option>р-р М100 24 ч</option><option>В25</option>
+        <option>р-р М100</option><option>В20</option><option>В15</option><option>В30</option><option>В7.5</option><option>В22.5</option><option>В40</option><option>В12.5</option>
+      </select>
+      <select name="Подвижность, морозостойкость, дубль, крупность щебня">
+        <option value="" disabled selected>Подвижность, морозостойкость и др.</option>
+        <option>F150W6</option><option>W6F100</option><option>П3</option><option>W4F75П4</option><option>W6F100П4</option><option>W4F75П4</option>
+        <option>W6F75П4 сспц</option><option>W4 П3</option><option>W4 П4</option><option>W4F75П3 лестница</option><option>W4F75П3</option><option>W4</option><option>W6F100 П4</option><option>W6F75П4</option><option>W4F75 П3</option>
+      </select>
+      <select name="Способ подачи смеси">
+        <option value="" disabled selected>Способ подачи смеси</option>
+        <option>стационар</option><option>кран</option><option>самослив</option><option>насос</option>
+      </select>
+      <input name="Объем, м³" type="number" step="0.01" min="0" placeholder="Объем, м³" required />
+      <input name="Адрес" placeholder="Адрес" />
+      <input name="Примечание" placeholder="Примечание" />
+      <button type="submit">Отправить заказ</button>
+    </form>
+  </div>
 
-    <div class="form-row">
-      <input 
-        name="Дата" 
-        type="date" 
-        required 
-      />
-      <input 
-        name="Время" 
-        type="time" 
-        placeholder="Время" 
-      />
-    </div>
-
-    <select name="Класс бетона/марка р-ра" required>
-      <option value="" disabled selected>Класс бетона/марка р-ра</option>
-      <option>р-р М100 48 ч</option>
-      <option>р-р М150 48 ч</option>
-      <option>р-р М100 24 ч</option>
-      <option>В25</option>
-      <option>р-р М100</option>
-      <option>В20</option>
-      <option>В15</option>
-      <option>В30</option>
-      <option>В7.5</option>
-      <option>В22.5</option>
-      <option>В40</option>
-      <option>В12.5</option>
-    </select>
-
-    <select name="Подвижность, морозостойкость, дубль, крупность щебня">
-      <option value="" disabled selected>Подвижность, морозостойкость и др.</option>
-      <option>F150W6</option>
-      <option>W6F100</option>
-      <option>П3</option>
-      <option>W4F75П4</option>
-      <option>W6F100П4</option>
-      <option>W4F75П4</option>
-      <option>W6F75П4 сспц</option>
-      <option>W4 П3</option>
-      <option>W4 П4</option>
-      <option>W4F75П3 лестница</option>
-      <option>W4F75П3</option>
-      <option>W4</option>
-      <option>W6F100 П4</option>
-      <option>W6F75П4</option>
-      <option>W4F75 П3</option>
-    </select>
-
-    <select name="Способ подачи смеси">
-      <option value="" disabled selected>Способ подачи смеси</option>
-      <option>стационар</option>
-      <option>кран</option>
-      <option>самослив</option>
-      <option>насос</option>
-    </select>
-
-    <input name="Объем, м³" type="number" step="0.01" min="0" placeholder="Объем, м³" required />
-
-    <input name="Адрес" placeholder="Адрес" />
-    <input name="Примечание" placeholder="Примечание" />
-
-    <button type="submit">Отправить заказ</button>
-  </form>
+  <div class="panel" id="panelOrders">
+    <h2>Мои заказы</h2>
+    <div id="ordersList" class="orders"></div>
+  </div>
 
   <script>
     const tg = window.Telegram.WebApp;
     tg.ready();
     tg.expand();
 
-    // Настраиваем главную кнопку Telegram (внизу)
+    function switchTab(tab) {
+      document.getElementById('tabNew').classList.toggle('active', tab === 'new');
+      document.getElementById('panelNew').classList.toggle('active', tab === 'new');
+      document.getElementById('tabOrders').classList.toggle('active', tab === 'orders');
+      document.getElementById('panelOrders').classList.toggle('active', tab === 'orders');
+    }
+
+    const url = new URL(window.location.href);
+    const tab = url.searchParams.get('tab') || 'new';
+    switchTab(tab);
+
+    // MainButton включаем только на вкладке "Новый заказ"
+    function updateMainButton() {
+      if (document.getElementById('panelNew').classList.contains('active')) {
+        tg.MainButton.setText('Отправить заказ');
+        tg.MainButton.enable();
+        tg.MainButton.show();
+      } else {
+        tg.MainButton.hide();
+      }
+    }
+    updateMainButton();
+
+    document.getElementById('tabNew').onclick = () => { switchTab('new'); updateMainButton(); };
+    document.getElementById('tabOrders').onclick = () => { switchTab('orders'); updateMainButton(); };
+
+    // Рендер "Мои заказы" из параметра orders (base64 JSON)
+    const ordersParam = url.searchParams.get('orders');
+    if (ordersParam) {
+      try {
+        const json = atob(ordersParam.replace(/-/g, '+').replace(/_/g, '/'));
+        const orders = JSON.parse(json);
+        renderOrders(orders);
+      } catch (e) {
+        // ignore
+      }
+    }
+
+    function renderOrders(orders) {
+      const container = document.getElementById('ordersList');
+      container.innerHTML = '';
+      if (!orders || !orders.length) {
+        container.textContent = 'Заказов пока нет';
+        return;
+      }
+      orders.forEach(o => {
+        const item = document.createElement('div');
+        item.className = 'order-item';
+        item.textContent = `${o.n} — ${o.c || ''} — ${o.d || ''}`;
+        item.onclick = () => showOrderDetails(o);
+        container.appendChild(item);
+      });
+    }
+
+    function showOrderDetails(o) {
+      const container = document.getElementById('ordersList');
+      const box = document.createElement('div');
+      box.className = 'order-details';
+      const fields = [
+        ['Номер заказа', o.n],
+        ['Дата/Время', o.d],
+        ['Контрагент', o.c],
+        ['Адрес', o.a],
+        ['Класс бетона/марка р-ра', o.k],
+        ['Подвижность, морозостойкость, дубль, крупность щебня', o.p],
+        ['Объем, м³', o.v],
+        ['Способ подачи смеси', o.s],
+        ['Примечание', o.m],
+      ];
+      box.innerHTML = fields.map(([k,v]) => `<div style="margin:6px 0"><b>${k}:</b> ${v || ''}</div>`).join('');
+      container.appendChild(box);
+      box.scrollIntoView({ behavior: 'smooth' });
+    }
+
+    // Отправка заказа
     tg.MainButton.setText('Отправить заказ');
     tg.MainButton.enable();
     tg.MainButton.show();
-
-    const today = new Date().toISOString().split('T')[0];
-    document.querySelector('input[name="Дата"]').value = today;
 
     function collectData() {
       const form = document.getElementById('orderForm');
       const formData = new FormData(form);
       const data = {};
-      formData.forEach((value, key) => {
-        if (value === undefined || value === null) return;
-        data[key] = String(value).trim();
-      });
+      formData.forEach((value, key) => { if (value !== undefined && value !== null) data[key] = String(value).trim(); });
       return data;
     }
 
     function validate() {
       const phone = document.querySelector('input[name="Телефон"]').value;
-      if (!/^[0-9]+$/.test(phone)) {
-        tg.showAlert('Телефон должен содержать только цифры.');
-        return false;
-      }
+      if (!/^[0-9]+$/.test(phone)) { tg.showAlert && tg.showAlert('Телефон должен содержать только цифры.'); return false; }
       const volume = document.querySelector('input[name="Объем, м³"]').value;
-      if (volume === '') {
-        tg.showAlert('Заполните объём.');
-        return false;
-      }
+      if (volume === '') { tg.showAlert && tg.showAlert('Заполните объём.'); return false; }
       return true;
     }
 
@@ -224,29 +176,13 @@
       const data = collectData();
       try {
         tg.sendData(JSON.stringify(data));
-        // Небольшая задержка перед закрытием, чтобы данные точно ушли
-        setTimeout(() => {
-          try {
-            if (typeof tg.showAlert === 'function') {
-              tg.showAlert('Заказ отправлен!');
-            }
-          } catch (e) {
-            // noop: старые версии Telegram могут не поддерживать showAlert
-          }
-          tg.close();
-        }, 200);
+        setTimeout(() => { try { tg.showAlert && tg.showAlert('Заказ отправлен!'); } catch(e) {} tg.close(); }, 200);
       } catch (e) {
-        tg.showAlert('Не удалось отправить заказ. Обновите приложение Telegram и попробуйте снова.');
+        tg.showAlert && tg.showAlert('Не удалось отправить заказ. Обновите приложение Telegram и попробуйте снова.');
       }
     }
 
-    // Обработка сабмита формы (как дубль)
-    document.getElementById('orderForm').addEventListener('submit', function (e) {
-      e.preventDefault();
-      sendOrder();
-    });
-
-    // Обработка главной кнопки Telegram
+    document.getElementById('orderForm').addEventListener('submit', function (e) { e.preventDefault(); sendOrder(); });
     tg.onEvent('mainButtonClicked', sendOrder);
   </script>
 </body>
